--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alevnyacow/create-ts-package",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "npx TypeScript projects scaffolder",
   "main": "index.js",
   "scripts": {
@@ -36,7 +36,5 @@
   "jest": {
     "preset": "ts-jest"
   },
-  "bin": {
-    "@alevnyacow/create-ts-package": "./transpiled/sources/index.js"
-  }
+  "bin": "./transpiled/sources/index.js"
 }
