--- a/root-level-files/tsconfig.json
+++ b/root-level-files/tsconfig.json
@@ -7,11 +7,7 @@
         "outDir": "transpiled",
         "strict": true,
         "esModuleInterop": true,
-        "allowJs": true,
-        "baseUrl": "sources",
-        "paths": {
-            "sources": ["index.ts"]
-        }
+        "allowJs": true
     },
     "include": ["./sources"]
 }
