--- a/root-level-files/tsconfig.json
+++ b/root-level-files/tsconfig.json
@@ -7,7 +7,9 @@
         "outDir": "transpiled",
         "strict": true,
         "esModuleInterop": true,
-        "allowJs": true
+        "allowJs": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true
     },
     "include": ["./sources"]
 }
