--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alevnyacow/create-ts-package",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "npx TypeScript projects scaffolder",
   "main": "index.js",
   "scripts": {
@@ -50,6 +50,7 @@
   },
   "bin": "./transpiled/index.js",
   "dependencies": {
-    "@alevnyacow/get-directory-files": "^1.0.0"
+    "@alevnyacow/get-directory-files": "^1.0.0",
+    "dotenv": "^16.0.0"
   }
 }
