--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "clean_transpiled": "del-cli --force ./transpiled",
     "clean_root_level_files_data": "del-cli --force ./transpiled/root-level-files/data",
-    "copy_root_level_files_data": "copyfiles -af \"./root-level-files/*.*\" \"./transpiled/root-level-files\"",
+    "copy_root_level_files_data": "copyfiles -af \"./root-level-files/*\" \"./transpiled/root-level-files\"",
     "format": "prettier --config .prettierrc --write sources/*",
     "lint": "eslint sources/**/*.ts --ext .ts",
     "check": "npm run lint && npm run test",
